--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,13 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc build active file",
-            "command": "/usr/bin/gcc",
+            "label": "C/C++: clang build active file",
+            "command": "/usr/bin/clang",
             "args": [
-                "-fdiagnostics-color=always",
+                "-fcolor-diagnostics",
+                "-fansi-escape-codes",
                 "-g",
-                "*.c",
+                "{*.c}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
